# staking-sdk-cli

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
docs/: command-reference.md  validator-onboarding.md
src/staking_sdk_py/: callGetters.py  constants.py  generateCalldata.py  generateTransaction.py  keyGenerator.py  signer_factory.py
src/staking_sdk_py/old/: signer_factory_20251016_ledgerblue_ng4.py  signer_factory_20251016_ng.py  signer_factory_20251016_ng2.py  signer_factory_20251016_ng3.py  signer_factory_20251016_signable_ng.py  signer_factory_20251016_works.py
staking-cli/: config.toml  config.toml.example  config.toml.sample  main.py  todo.txt
staking-cli/hooks/: hook-py_ecc.py
staking-cli/src/: add_validator.py  change_commission.py  claim.py  compound.py  delegate.py  helpers.py  logger.py  parser.py  query.py  query_menu.py  signer.py  undelegate.py  withdraw.py
